--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -14,3 +14,12 @@ a {
   color: aquamarine;
   font-size: 16px;
 }
+
+p {
+  color: gray;
+  font-size: 21px;
+}
+
+.header--secondary {
+  font-size: 42px;
+}
